<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/import_tit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    >

    <include
        android:id="@+id/position_title"
        layout="@layout/titlebar_comm"></include>

    <TextView
        android:id="@+id/tv_mpt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_below="@+id/position_title"
        android:padding="@dimen/item_divider_height"
        android:text="@string/import_map"
        android:textSize="20dp"
        android:textColor="@color/font_secondary"/>




        <TextView
            android:id="@+id/tv_t"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_mpt"
            android:drawableLeft="@drawable/map_upward"
            android:padding="@dimen/item_divider_height"
            android:gravity="center_vertical"
            android:text="@string/revert" />

    <Button
        android:id="@+id/bt_go"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/background_green"
        android:text="@string/go"
        android:textColor="@color/font_white" />

    <ListView
        android:id="@+id/mpt_ls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bt_go"
        android:layout_below="@+id/tv_t"></ListView>


</RelativeLayout>