<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/map_tit"
        layout="@layout/map_title" />

    <LinearLayout
        android:id="@+id/map_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/map_tit"
        android:orientation="horizontal"
        android:padding="@dimen/item_divider_height">

        <Button
            android:id="@+id/go_map"
            android:layout_width="0dp"
            android:layout_height="@dimen/bt_h"
            android:layout_weight="1"
            android:background="@color/background_yellow"
            android:drawableLeft="@drawable/mymap_go"
            android:gravity="center"
            android:paddingLeft="12dp"
            android:text="@string/go_map"
            android:textColor="@color/font_white" />

        <Button
            android:id="@+id/leave_map"
            android:layout_width="0dp"
            android:layout_height="@dimen/bt_h"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@color/background_biue"
            android:drawableLeft="@drawable/mymap_leave"
            android:gravity="center"
            android:paddingLeft="12dp"
            android:text="@string/leave_map"
            android:textColor="@color/font_white" />

        <Button
            android:id="@+id/delete_map"
            android:layout_width="0dp"
            android:layout_height="@dimen/bt_h"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@color/background_dark_green"
            android:drawableLeft="@drawable/mymap_delete"
            android:gravity="center"
            android:paddingLeft="12dp"
            android:text="@string/delete_map"
            android:textColor="@color/font_white" />
    </LinearLayout>

    <EditText
        android:id="@+id/map_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="搜索"
        android:imeOptions="actionSearch"
        android:singleLine="true"
        android:visibility="gone" />

    <Button
        android:id="@+id/bt_go"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/background_green"
        android:text="@string/go"
        android:textColor="@color/font_white" />

    <ListView
        android:id="@+id/map_mymap_lv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bt_go"
        android:layout_below="@id/map_ip"
        android:dividerHeight="12dp" />

</RelativeLayout>
