<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/item_divider_height"
        android:orientation="horizontal">

            <Button
                android:id="@+id/rb_map"
                android:layout_width="0dp"
                android:layout_height="@dimen/bt_h"
                android:layout_weight="1"
                android:background="@color/background_yellow"
                android:checked="true"
                android:gravity="center"
                android:text="@string/ranking"
                android:textColor="@color/font_white" />

            <Button
                android:id="@+id/rb_classification"
                android:layout_width="0dp"
                android:layout_height="@dimen/bt_h"
                android:layout_weight="1"
                android:background="@color/background_biue"
                android:checked="true"
                android:gravity="center"
                android:text="@string/classification"
                android:textColor="@color/font_white"
                android:layout_marginLeft="10dp"/>

            <Button
                android:id="@+id/rb_mymap"
                android:layout_width="0dp"
                android:layout_height="@dimen/bt_h"
                android:layout_weight="1"
                android:background="@color/background_dark_green"
                android:checked="true"
                android:gravity="center"
                android:text="@string/mymap"
                android:textColor="@color/font_white"
                android:layout_marginLeft="10dp"/>


    </LinearLayout>

    <ListView
        android:id="@+id/map_ls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></ListView>
</LinearLayout>