<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/titlebar_comm" />

   

        <RelativeLayout
            android:id="@+id/addr_l1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="7dp"
                android:paddingLeft="7dp"
                android:paddingTop="10dp"
                android:text="@string/gps_addr"
                android:textColor="#808080"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/display_addr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_alignParentRight="true"
                android:drawableLeft="@drawable/background_item_city"
                android:paddingBottom="7dp"
                android:paddingRight="8dp"
                android:paddingTop="10dp"
                android:clickable="true"
                android:text=""
                android:visibility="gone"
                android:hint="@string/addr_hint"
                android:textColor="#00ff7f"
                android:textSize="14sp" />

            
        </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#d3d3d3"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="7dp"
            android:paddingLeft="8dp"
            android:paddingTop="7dp"
            android:text="@string/addr_city"
            android:textColor="#808080"
            android:textSize="10sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/city_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/city_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#E8E8E8"
            android:cacheColorHint="#00000000"
            android:scrollbars="none" />
    </RelativeLayout>

</LinearLayout>