<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/roots"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_Grey">

    <include
        android:id="@+id/tit"
        layout="@layout/titlebar_comm" />

    <LinearLayout
        android:id="@+id/maproot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tit"
        android:background="@color/background_Grey"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/go_map"
            android:layout_width="0dp"
            android:layout_height="@dimen/bt_h"
            android:layout_weight="1"
            android:background="@drawable/background_servarrand_shape"
            android:checked="true"
            android:drawableLeft="@drawable/mymap_go"
            android:gravity="center"
            android:lines="1"
            android:paddingLeft="12dp"
            android:text="@string/go_map"
            android:textColor="@color/font_white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/leave_map"
            android:layout_width="0dp"
            android:layout_height="@dimen/bt_h"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/background_servartype_shape"
            android:checked="true"
            android:drawableLeft="@drawable/mymap_leave"
            android:gravity="center"
            android:lines="1"
            android:paddingLeft="12dp"
            android:text="@string/leave_map"
            android:textColor="@color/font_white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/delete_map"
            android:layout_width="0dp"
            android:layout_height="@dimen/bt_h"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_map_detele"
            android:checked="true"
            android:drawableLeft="@drawable/mymap_delete"
            android:gravity="center"
            android:lines="1"
            android:paddingLeft="12dp"
            android:text="@string/delete_map"
            android:textColor="@color/font_white"
            android:textSize="16sp"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/mymaprot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/maproot">

        <ListView
            android:id="@+id/map_mymap_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/background_Grey"
            android:dividerHeight="@dimen/item_height_interval"></ListView>
    </RelativeLayout>
</RelativeLayout>